--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,17 @@
-# spring jpa database auto update
+# Spring Jpa config
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # mysql config
 spring.datasource.url=jdbc:mysql://localhost:3306/financial_management_system
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# log config
+logging.level.root=ERROR
+
+# date time format config
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
