--- a/backend/financial_management_system_backend/src/main/resources/application.properties
+++ b/backend/financial_management_system_backend/src/main/resources/application.properties
@@ -3,13 +3,14 @@
 #server.port=8888
 
 # Spring Jpa config
-## ????????????????
+# auto update database
 spring.jpa.hibernate.ddl-auto=update
-## ? console ??????? sql ??
+
+# show query sql command on console
 #spring.jpa.show-sql=true
 
 # mysql config
-spring.datasource.url=jdbc:mysql://localhost:3306/financial_management_system
+spring.datasource.url=jdbc:mysql://localhost:3306/financial_management_system?serverTimezone=GMT%2B8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -18,6 +19,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #logging.level.root=ERROR
 
 # date time format config
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
