--- a/financial_management_system_frontend/package.json
+++ b/financial_management_system_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "financial_management_system_frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,11 +10,13 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "antd": "^5.3.0",
+    "antd": "^5.4.6",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.62.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
