--- a/backend/financial_management_system_backend/src/main/resources/application.properties
+++ b/backend/financial_management_system_backend/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 
 # mysql config
-spring.datasource.url=jdbc:mysql://localhost:3306/financial_management_system?serverTimezone=GMT%2B8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/financial_management_system?serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
