--- a/financial_management_system_frontend/package.json
+++ b/financial_management_system_frontend/package.json
@@ -12,11 +12,13 @@
     "@types/react-dom": "^18.0.11",
     "antd": "^5.4.6",
     "axios": "^1.3.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
+    "scroll-into-view": "^1.16.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/scroll-into-view": "^1.16.0"
   }
 }
