--- a/financial_management_system_backend/src/main/resources/application.properties
+++ b/financial_management_system_backend/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 
 # mysql config
-#spring.datasource.url=jdbc:mysql://localhost:3306/financial_management_system?serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url=jdbc:mysql://localhost:3306/financial_management_system?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/fms?serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/fms?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -22,9 +22,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # date time format config
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 #spring.jackson.time-zone=GMT+8
-spring.mvc.format.date=yyyy-MM-dd
-spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
-spring.mvc.format.time=HH:mm:ss
+#spring.mvc.format.date=yyyy-MM-dd
+#spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+#spring.mvc.format.time=HH:mm:ss
 
-spring.web.resources.static-locations=/frontend/build,classpath:static
+spring.web.resources.static-locations=classpath:static,classpath:static/static
 
