--- a/financial_management_system_frontend/package.json
+++ b/financial_management_system_frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "exceljs": "^4.3.0",
+    "function-caller": "^1.1.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
